Issue API token endpoint
