# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\TokenController;
 use App\Http\Controllers\Api\RegisterUserController;
 use Illuminate\Support\Facades\Route;
 
@@ -15,3 +16,5 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::post('/register', [RegisterUserController::class, 'register']);
+
+Route::post('/tokens', [TokenController::class, 'issueToken']);
